// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`recursive golden freeze — 2 iterations over C16 > iteration 1 marker coordinates (frozen) 1`] = `
[
  {
    "after": "+export const alpha5 = 500; // changed",
    "index": 10,
    "marker": "+[SUGGESTED FIX] export const alpha5 = ALPHA_BASE * 100;",
  },
  {
    "after": "+export const beta30 = 3000; // changed",
    "index": 42,
    "marker": "+[SUGGESTED FIX] export const beta30 = BETA_BASE * 1000;",
  },
  {
    "after": " export const gamma6 = 6;",
    "index": 57,
    "marker": "+[SUGGESTED FIX] const gamma6 = 6;",
  },
]
`;

exports[`recursive golden freeze — 2 iterations over C16 > iteration 2 full output (frozen) 1`] = `
"diff --git a/src/alpha.ts b/src/alpha.ts
index 657651a..bf211dc 100644
--- a/src/alpha.ts
+++ b/src/alpha.ts
@@ -2,7 +2,9 @@ export const alpha1 = 1;
 export const alpha2 = 2;
 export const alpha3 = 3;
 export const alpha4 = 4;
-export const alpha5 = 5;
+export const alpha5 = 500; // changed
+[SUGGESTED FIX] export const alpha5 = ALPHA_BASE * 100;
 export const alpha6 = 6;
+[SUGGESTED FIX] export const alpha7 = 7; // validated
 export const alpha7 = 7;
 export const alpha8 = 8;
@@ -27,7 +29,7 @@ export const alpha26 = 26;
 export const alpha27 = 27;
 export const alpha28 = 28;
 export const alpha29 = 29;
-export const alpha30 = 30;
+export const alpha30 = 3000; // changed
 export const alpha31 = 31;
 export const alpha32 = 32;
 export const alpha33 = 33;
diff --git a/src/beta.ts b/src/beta.ts
index 6ac9ab0..bfd79c7 100644
--- a/src/beta.ts
+++ b/src/beta.ts
@@ -2,7 +2,7 @@ export const beta1 = 1;
 export const beta2 = 2;
 export const beta3 = 3;
 export const beta4 = 4;
-export const beta5 = 5;
+export const beta5 = 500; // changed
 export const beta6 = 6;
 export const beta7 = 7;
 export const beta8 = 8;
@@ -27,7 +27,9 @@ export const beta26 = 26;
 export const beta27 = 27;
 export const beta28 = 28;
 export const beta29 = 29;
-export const beta30 = 30;
+export const beta30 = 3000; // changed
+[SUGGESTED FIX] export const beta30 = BETA_BASE * 1000;
+[SUGGESTED FIX] export const beta31 = 31; // validated
 export const beta31 = 31;
 export const beta32 = 32;
 export const beta33 = 33;
diff --git a/src/gamma.ts b/src/gamma.ts
index b2320f6..2513611 100644
--- a/src/gamma.ts
+++ b/src/gamma.ts
@@ -2,7 +2,8 @@ export const gamma1 = 1;
 export const gamma2 = 2;
 export const gamma3 = 3;
 export const gamma4 = 4;
-export const gamma5 = 5;
+export const gamma5 = 500; // changed
 export const gamma6 = 6;
+[SUGGESTED FIX] const gamma6 = 6;
 export const gamma7 = 7;
 export const gamma8 = 8;
@@ -27,7 +28,7 @@ export const gamma26 = 26;
 export const gamma27 = 27;
 export const gamma28 = 28;
 export const gamma29 = 29;
-export const gamma30 = 30;
+export const gamma30 = 3000; // changed
 export const gamma31 = 31;
 export const gamma32 = 32;
 export const gamma33 = 33;
"
`;

exports[`recursive golden freeze — 2 iterations over C16 > iteration 2 marker coordinates (frozen, off-by-N INCLUDED) 1`] = `
[
  {
    "after": "+export const alpha5 = 500; // changed",
    "index": 10,
    "marker": "+[SUGGESTED FIX] export const alpha5 = ALPHA_BASE * 100;",
  },
  {
    "after": " export const alpha6 = 6;",
    "index": 12,
    "marker": "+[SUGGESTED FIX] export const alpha7 = 7; // validated",
  },
  {
    "after": "+export const beta30 = 3000; // changed",
    "index": 43,
    "marker": "+[SUGGESTED FIX] export const beta30 = BETA_BASE * 1000;",
  },
  {
    "after": "+[SUGGESTED FIX] export const beta30 = BETA_BASE * 1000;",
    "index": 44,
    "marker": "+[SUGGESTED FIX] export const beta31 = 31; // validated",
  },
  {
    "after": " export const gamma6 = 6;",
    "index": 59,
    "marker": "+[SUGGESTED FIX] const gamma6 = 6;",
  },
]
`;
